# school-mdriver-desktop

./: CMakeLists.txt  main.cc  main.h
lib/: Logger.h  default.h  driver.cc  driver.h
lib/gui/: cpanel.cc  cpanel.h
