CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(school-mdriver-desktop VERSION 1.0)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

FILE(GLOB_RECURSE SOURCES lib/*.cc)
FILE(GLOB_RECURSE HEADERS lib/*.h)

ADD_EXECUTABLE(
  ${PROJECT_NAME}
  
  main.cc main.h

  ${SOURCES} ${HEADERS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTK3_LIBRARIES})